docs: Add approvals route API swag content
